--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -50,6 +50,7 @@ html, body {
 
 .header-container {
     padding: 5px;
+    width: 75%;
     border-radius: 5px;
     position: absolute;
     top: 50%;
