Changed the services icons and wrapped the row div inside of a parent div.

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -123,16 +123,11 @@ html, body {
 .services-container {
     background-color: gray;
     padding: 5px;
-    min-height: 75vh;
-    position: relative;
 }
 
 .services-row {
+    margin-top: 35px;
     padding: 5px, 0px, 5px, 0px;
-    /* position: absolute;
-    top: 50%;
-    left:50%; */
-    /* transform: translate(-50%,-50%); */
     text-align: center;
 }
 
