--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -179,9 +179,16 @@ html, body {
     width: 100%;
 }
 
+/**************************************
+*
+* CONTACT
+*
+***************************************/
 
-
-
+#map {
+    width: 100%;
+    height: 400px;
+}
 
 
 
