--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -185,9 +185,13 @@ html, body {
 *
 ***************************************/
 
-#map {
-    width: 100%;
-    height: 400px;
+.contact-container {
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.900),
+        rgba(0, 0, 0, 0.900)
+      ),
+      url('../img/toledo.jpg');
+      background-size: cover;
 }
 
 
