--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -151,6 +151,10 @@ html, body {
     visibility: hidden;
 }
 
+.services-item.load {
+    visibility: visible;
+}
+
 /**************************************
 *
 * WORK
